# SPDX-License-Identifier: Apache-2.0
# Copyright (C) 2019-2020 Intel Corporation
option('syslog', type : 'boolean', value : true, description : 'enabling logging into syslog')
option('enable_perf', type : 'boolean', value : false, description : 'enabling performance counters')
option('enable_cli', type: 'boolean', value : true, description : 'enabling command line tool build')
